--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+body
+{
+    background-image: url(assets/towfiqu-barbhuiya-joqWSI9u_XM-unsplash.jpg);
+    background-size: cover;
+}
