--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -8,22 +8,34 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-    <form (ngSubmit)="register()" class="main">
+    <form (ngSubmit)="register()" class="main" [formGroup]="registerForm">
       
+
+        
 
         <div class="container w-50 p-2 mt-5 border   text-center "style="border-radius: 30px;   "  >
             <h1 class="text-center  mb-3 mt-2 ">Registration Page</h1>
          
-            <div class="mt-2 p-2 ">
-                <input name="uname" id="unameid" [(ngModel)]="uname" class="text-white" type="text" placeholder="User Name" style="border-radius: 10px;" class="border  ">
+            <div *ngIf='this.registerForm.get("uname")?.errors && this.registerForm.get("uname")?.touched'>
+                <p class="text-danger">Incorrect Username</p>
             </div>
 
+            <div class="mt-2 p-2 ">
+                <input name="uname" id="unameid" formControlName="uname" class="text-white" type="text" placeholder="User Name" style="border-radius: 10px;" class="border  ">
+            </div>
+
+            <div *ngIf="this.registerForm.get('acno')?.errors && this.registerForm.get('acno')?.touched">
+                <p class="text-danger">Incorrect Account Number</p>
+            </div>
             <div class="mt-2 p-2">
-                <input name="acno" id="acid" [(ngModel)]="acno" class="text-white" type="text" placeholder="account number" style="border-radius: 10px;" class="border ">
+                <input name="acno" id="acid"  formControlName="acno"  class="text-white" type="text" placeholder="account number" style="border-radius: 10px;" class="border ">
             </div>
 
+            <div *ngIf="this.registerForm.get('psw')?.errors && this.registerForm.get('psw')?.touched">
+                <p class="text-danger">Incorrect Password</p>
+            </div>
             <div class="mt-2 p-2 ">
-                <input name="psw" id="pid" [(ngModel)]="psw"   type="password" placeholder="password" style="border-radius: 10px;" class="border">
+                <input name="psw" id="pid" formControlName="psw"  type="password" placeholder="password" style="border-radius: 10px;" class="border">
             </div>
 
             <div class="mt-1 p-1">
