--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,10 +8,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-    <form action="" (ngSubmit)="login()" class="main" [formGroup] = loginForm>
-      
-
-        <div class="container w-50 p-2 mt-5 border   text-center "style="border-radius: 30px;   "  >
+    <form (ngSubmit)="login()" class="main" [formGroup] ="loginForm">
+        <div class="container w-50 p-2 mt-5 border   text-center "style="border-radius: 30px;"  >
             <h1 class="text-center  mb-3 mt-2">Login Page</h1>
          
             <div *ngIf="this.loginForm.get('acno')?.errors && this.loginForm.get('acno')?.touched">
