--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,8 @@ body
     background-image: url(assets/towfiqu-barbhuiya-joqWSI9u_XM-unsplash.jpg);
     background-size: cover;
 }
+
+.style
+{
+    opacity: 0;
+}
